Added functioning GET/POST requests for user accounts.
